# RPG_story_generator

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: main.yml
core/rpggen/: __init__.py  cli.py  consistency_checker.py  llm_client.py
core/rpggen/models/: __init__.py  character.py  characters.schema.json  event.py  events.schema.json  faction.schema.json  flow.py  historical_event.schema.json  narrative_flow.schema.json  notable_figure.schema.json  plot.py  plot_outline.schema.json  proper_noun.schema.json  relation.py  relations.schema.json  script.py  scripts.schema.json  special_energy.schema.json  technology.schema.json  world.py  world.schema.json
core/rpggen/runner/: base_node.py  character_builder.py  dummy_nodes.py  world_builder.py
core/rpggen/utils/: __init__.py  id.py  log.py  text.py
docs/: README.md
examples/: chars.yml  config.yml  world.yml
scripts/: check_schemas.py
tests/: test_base_node.py  test_character_builder.py  test_cli.py  test_consistency_checker.py  test_llm_client.py  test_utils.py  test_world_builder.py
webui/: README.md
